tulip-dev: suppress Java 25 warnings